{
    "name": "InputManager",
    "maps": [
        {
            "name": "Gameplay",
            "id": "667ce29a-5b41-440e-bfc4-40968f91361e",
            "actions": [
                {
                    "name": "CreateItem",
                    "type": "Button",
                    "id": "54b18208-452f-46a8-a33a-d87f54d759d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "c2d2bf11-141f-4461-939a-3d4564d78221",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SetDefaultCamPosition",
                    "type": "Button",
                    "id": "7b3e48cb-a4bd-4d84-a460-ee5c566418b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeMinimapSize",
                    "type": "Value",
                    "id": "f32e2e7c-f1eb-4b6a-b664-2133fd7110dc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HideMiniMap",
                    "type": "Button",
                    "id": "1dbae946-7a80-4241-8834-38e9dd7cfd3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "dd375973-4b4b-4378-8d55-2f92c26a4b87",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "cd5a2da2-ab7c-4242-807a-d8236f249f81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SaveGame",
                    "type": "Button",
                    "id": "39ff1252-9ab5-43ca-8919-a45d9aedfb07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LoadGame",
                    "type": "Button",
                    "id": "5bef544c-480e-4910-aae7-60254c2013f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09c951ae-7f02-46c7-a5c9-60fc3ee05c2b",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a6ec33f-0c41-4eeb-98fa-f8338335132c",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetDefaultCamPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d7db199e-6f03-43cb-8862-6490a3fb4218",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMinimapSize",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5dbb3c83-aad3-4de5-bee1-b7b07a7ef6c6",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMinimapSize",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "25fd406a-59bf-4e58-bea3-fa92053948ca",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMinimapSize",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "109f28b5-8d79-40c1-9e3e-d98c1fab2d14",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMinimapSize",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "796e658e-03ab-4522-ac9e-2a4d3e8280b2",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMinimapSize",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d9989e48-bf18-45ea-9217-9bf09bf21cba",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMinimapSize",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4315e9c8-9990-4dff-bff3-ac53a77b2ffb",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HideMiniMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cf9614d-b9f3-47e2-8123-716e2c80fc6f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07e077a1-8221-4734-8f76-b97f1d76c25e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2f5f70a-8ae5-4939-b15f-51141b947f6d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ff3d55a-44ea-4c0a-ad00-3cf236127a83",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaveGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e6c3932-09c1-44f9-9c88-ec13c9636782",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Spells",
            "id": "3d2ee0b4-5438-425b-991d-ea7693b3a8ea",
            "actions": [
                {
                    "name": "CastFirstSpell",
                    "type": "Button",
                    "id": "9c0f6d23-2d38-447e-9af4-41b7735e7b50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CastSecondSpell",
                    "type": "Button",
                    "id": "5efa4e2b-0722-4621-a12c-904373b92502",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CastThirdSpell",
                    "type": "Button",
                    "id": "21241ef7-9e16-4d5a-b8ed-17658f2c9acd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "f6882440-b688-4a55-849a-10c86a5d70ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c6bcd23-bc50-4de7-bdf4-6d2eb005bd24",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastFirstSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d1ec542-0c84-4a4c-a2c3-af4e86abbc5f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSecondSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a9059f-c0b7-4a2a-b13e-dc3aed65da14",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastThirdSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ec09d21-dbc7-4bfd-bf76-ed1289bc6d2c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}